--- a/lodigo/index.html
+++ b/lodigo/index.html
@@ -97,12 +97,12 @@
 </div>
 <div class="answer">
 <button class="btn" onclick="terceira()">SIM</button>
-<button class="btn" onclick="terceira()">NÃO</button>
+<button class="btn" onclick="terceria()">NÃO</button>
 </div>
 </div>
-<div id="Pregunta 3" class="hide">
+<div id="terceira" class="hide">
 <div class="question">
-<h1>Pergunta 3</h1>
+<h1>Pregunta 3</h1>
 <p>El siguiente vídeo tiene un límite para que muy pocas personas lo vean al mismo tiempo... ¿Tienes intención de verlo hasta el final?</p>
 </div>
 <div class="answer">
