--- a/lodigo/index.html
+++ b/lodigo/index.html
@@ -111,7 +111,7 @@
 </div>
 </div>
 </div>
-<p style="text-align: center; font-weight: bold;">© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+<p style="text-align: center; font-weight: bold;">© 2023 – All rights reserved. Este sitio no forma parte ni está respaldado por Facebook. Facebook es una marca registrada de Meta.</p>
 </div>
 <script>
     function segunda() {
